style.css
@media print {
    .details {
        padding-top: 2cm;
        padding-bottom: 2cm; 
        padding-right: 2cm 
    }

    #toc {
        display: none !important;
    }
    #content {
        margin-left: 0px !important; 
    }
}

@media screen and (max-width: 1024px) {
    #toc {
        display: none !important;
    }
    #content {
        margin-left: 0px !important; 
    }
}

html {
    scroll-behavior: smooth;
}

body {
    margin: 0px;
    font-family: Georgia, serif;
    font-size: 17;
}


.tocify-item.active {
    background-color: rgb(55, 126, 184);
    color: #ffffff;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
}

.tocify-header {
    font-family: Lato;
    font-weight: 900;
    margin-top: 1em;
}

.tocify-subheader {
    font-family: Lato;
    font-weight: 100;
    margin-left: 1em;
}

#toc:hover #full-toc {
    display: block;
}

#container {
    max-width: 1500px;
    margin: 0px auto;
}

#toc {
    width: 250px;
    top: 30px;
}

#content {
    max-width: 1200px;
    padding: 0px 30px 50px;
    margin-left: 300px;
    background-color: white;
}

span.emph {
    display: inline-block;
    transform: scale(1.5);
    -ms-transform: scale(1.5);
    color: #940720;
    font-weight: bold;
    margin: 0.25em;
}

div .year-label {
    font-style: italic;
    font-family: lato;
    font-weight: 200;
    margin: 1em 0em 0.5em;
}

div .subsection {
    display: grid;
    grid-template-areas:
        "timeline"
        "details"
        "addsubsection"
        "addentry"
}

div .subsection-bare {
    display: grid;
    grid-template-areas:
        "details"
}

.subsection-bare .entry {
    color: rgb(55, 126, 184);
}

div #contact {
    padding: 30px 0px 0px;
    width: 100%;
    background-color: white;
    float: left; 
}

div #idbox {
    float: left;
    margin: 0px;
    text-align: left;
    max-width: 650px;
    padding-bottom: 10px;
    padding-left: 40px;
    font-size: 14pt;
    font-family: 'Titillium Web', 'Lato', sans-serif;
    font-weight: 200;
}

div #photo {
    float: left;
}

#photo img {
    width: 300px;
}

div #name {
    font-size: 35pt;
    font-family: 'Titillium Web', 'Lato', sans-serif;
    font-weight: 700;
    text-transform: uppercase
}

#credentials {
    font-size: 24pt;
    font-weight: 300;
    text-transform: none;
}

div #title {
    font-size: 24pt;
    font-family: 'Titillium Web', 'Lato', sans-serif;
    font-weight: 200;
}

div #blurb {
    font-size: 16pt;
    padding: 5px;
    margin: 20px 0px;
    background-color: rgb(56, 126, 185);
    color: white;
}

.pagebreak {
    page-break-before: always;
}

@media (min-width: 600px) {
    .subsection {
        grid-template-columns: 300px 1fr !important;
        grid-template-areas:
            "timeline details"
            "addsubsection addentry" !important;
    }
}

div .addsubsection {
    height: 30px
}

div .addentry {
    height: 30px
}

div .details {
    padding: 10px 30px 10px;
    grid-area: details;
}

div .details-bare {
    padding: 10px 30px 10px;
    grid-area: details;
}

.entry-text.highlight {
    padding-left: 6px;
    margin-left: -6px;
}

.entry-text.highlight .entry-title {
    background-color: rgb(255, 249, 153);
    border-radius: 6px;
    padding: 0px 6px;
    margin: 0px 6px 0px -6px;
}


div .timeline-block {
    grid-area: timeline;
}

.entry {
    margin: 0px 0px 1em;
}

.entry-link {
    margin: 0px 5px 0px 1px;
}

.entry-text {
    overflow: hidden;
    color: black;
}

.clear {
    clear: both;
}

.entry-title {
    font-weight: bold;
    color: #A41034;
    color: #940720;
    /* color: #ED1B2F; */
}

/*
.highlight {
    background-color: #FFF999;
    margin: -0.2em -0.2em 0.3em -0.3em;
    padding: 0.2em 0.2em 0.2em 0.3em;
    position: relative;
    border-radius: 6px;
}
*/

a.entry-title-link:link, a.entry-title-link:visited {
    color: #A41034;
    text-decoration: none    
}

a.entry-title-link:hover, a.entry-title-link:active {
    color: #A41034;
    text-decoration: underline
}

span.entry-title-nolink {
    color: #000000;
}

h2 {
    font-size: 20pt;
    font-weight: bold;
    font-family: 'Oswald', sans-serif;
}

h2.subsection-title {
    margin: 10px 20px;
}

h2.subsection-title-bare {
    margin: 0px 0px 10px;
}

.subsection-continue {
    font-size: 16pt;
    font-weight: bold;
    margin: 10px 20px;
    color: #999999;
}

.timeline-brief {
    font-family: 'Titillium Web', 'Lato', sans-serif;
    font-weight: 400;
    font-size: 13pt;
}

.timeline-years {
    font-family: 'Titillium Web', 'Lato', sans-serif;
    font-weight: 300;
    font-size: 13pt;
}

.timeline-years path.domain {
    display: none;
}

.tick line {
    display: none;
}

.timeline {
    margin: 0px 0px 0px;
}

div.legend {
    min-height: 30px;
}


h1 {
    padding-top: 10px;
    font-family: 'Titillium Web', 'Lato', sans-serif;
    text-transform: uppercase;
    text-align: center;
    color: black;
    font-size: 28pt;
    font-weight: 300;
}

div.section-title-underline {
    width: 25px;
    height: 0px;
    margin: 10px auto -10px;
    padding-bottom: 8;
    border-top-style: solid;
    border-top-width: 6px;
}

@page {
    @bottom-center { content: element(footer) }
}

